syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example";
option java_outer_classname = "PHLevelMeterProto";

service pHLevelMeter {
  // Sends a request to get the current pH level at a specific location
  rpc GetPhLevel (PhLevelRequest) returns (PhLevelResponse) {}
}

message PhLevelRequest {
  // Coordinates of the location to check pH level
  string location = 1;
}

message PhLevelResponse {
  // Current pH level at the specified location
  float ph_level = 1;
}
